@@ -3,7 +3,7 @@ package com.alibknc.soccermanagement.service;
 import com.alibknc.soccermanagement.model.exception.CustomException;
 import com.alibknc.soccermanagement.model.entity.Player;
 import com.alibknc.soccermanagement.model.entity.Team;
-import com.alibknc.soccermanagement.model.mapper.PlayerMapper;
+import com.alibknc.soccermanagement.mapper.PlayerMapper;
 import com.alibknc.soccermanagement.model.request.CreatePlayerRequest;
 import com.alibknc.soccermanagement.model.request.UpdatePlayerRequest;
 import com.alibknc.soccermanagement.model.response.PlayerDto;
@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class PlayerService {
@@ -33,16 +32,16 @@ public class PlayerService {
         List<Player> playerList = playerRepository.findAll();
 
         return playerList.stream()
-                .map(PlayerMapper.INSTANCE::toPlayerDto)
-                .collect(Collectors.toList());
+                .map(PlayerMapper.INSTANCE::toPlayerDto).toList();
     }
 
-    public List<PlayerDto> getPlayersByTeamId(UUID teamId) {
-        List<Player> playerList = playerRepository.getByTeamId(teamId);
+    public PlayerDto getPlayerById(UUID id) {
+        return PlayerMapper.INSTANCE.toPlayerDto(playerRepository.findById(id).orElseThrow(() -> new CustomException("Player Not Found")));
+    }
 
-        return playerList.stream()
-                .map(PlayerMapper.INSTANCE::toPlayerDto)
-                .collect(Collectors.toList());
+    public List<PlayerDto> getPlayersByTeamId(UUID id) {
+        List<Player> playerList = playerRepository.getPlayersByTeamId(id);
+        return playerList.stream().map(PlayerMapper.INSTANCE::toPlayerDto).toList();
     }
 
     public PlayerDto createPlayer(CreatePlayerRequest request) {
@@ -53,7 +52,7 @@ public class PlayerService {
         }
 
         if (request.getStatus() == Status.FOREIGN) {
-            int foreignCount = playerRepository.getPlayerCountOfTeamByIdAndStatus(request.getTeamId(), request.getStatus());
+            int foreignCount = playerRepository.getPlayerCountByTeamIdAndStatus(request.getTeamId(), request.getStatus());
 
             if (foreignCount >= 6) {
                 throw new CustomException("Maximum Foreign Player Limit Reached");
@@ -61,14 +60,14 @@ public class PlayerService {
         }
 
         if (request.getPosition() == Position.GOALKEEPER) {
-            int gkCount = playerRepository.getPlayerCountOfTeamByIdAndPosition(request.getTeamId(), request.getPosition());
+            int gkCount = playerRepository.getPlayerCountByTeamIdAndPosition(request.getTeamId(), request.getPosition());
 
             if (gkCount >= 2) {
                 throw new CustomException("Maximum GoalKeeper Player Limit Reached");
             }
         }
 
-        Player player = PlayerMapper.INSTANCE.toPlayer(request);
+        Player player = PlayerMapper.INSTANCE.toPlayerForCreate(request);
         Team team = teamRepository.findById(request.getTeamId()).orElseThrow(() -> new CustomException("Team Not Found"));
         player.setTeam(team);
         player = playerRepository.save(player);
@@ -88,7 +87,7 @@ public class PlayerService {
     }
 
     @Transactional
-    public void deletePlayersOfTeam(UUID id) {
+    public void deletePlayersTeamId(UUID id) {
         playerRepository.deleteByTeamId(id);
     }
 
