@@ -2,7 +2,7 @@ package com.alibknc.soccermanagement.service;
 
 import com.alibknc.soccermanagement.model.exception.CustomException;
 import com.alibknc.soccermanagement.model.entity.Team;
-import com.alibknc.soccermanagement.model.mapper.TeamMapper;
+import com.alibknc.soccermanagement.mapper.TeamMapper;
 import com.alibknc.soccermanagement.model.request.CreateTeamRequest;
 import com.alibknc.soccermanagement.model.request.UpdateTeamRequest;
 import com.alibknc.soccermanagement.model.response.TeamDto;
@@ -11,7 +11,6 @@ import com.alibknc.soccermanagement.repository.TeamRepository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class TeamService {
@@ -26,21 +25,22 @@ public class TeamService {
         List<Team> teamList = teamRepository.findAll();
 
         return teamList.stream()
-                .map(TeamMapper.INSTANCE::toTeamDto)
-                .collect(Collectors.toList());
+                .map(TeamMapper.INSTANCE::toTeamDto).toList();
     }
 
     public TeamDto getTeamById(UUID id) {
-        return TeamMapper.INSTANCE.toTeamDto(teamRepository.findById(id).orElseThrow(() -> new CustomException("Team Not Found")));
+        Team team = teamRepository.findById(id).orElseThrow(() -> new CustomException("Team Not Found"));
+        return TeamMapper.INSTANCE.toTeamDto(team);
     }
 
-    public TeamDto createTeam(CreateTeamRequest team) {
-        Team result = teamRepository.save(TeamMapper.INSTANCE.toTeamForCreate(team));
-        return TeamMapper.INSTANCE.toTeamDto(result);
+    public TeamDto createTeam(CreateTeamRequest request) {
+        Team team = teamRepository.save(TeamMapper.INSTANCE.toTeamForCreate(request));
+        return TeamMapper.INSTANCE.toTeamDto(team);
     }
 
-    public TeamDto updateTeam(UpdateTeamRequest team) {
-        return TeamMapper.INSTANCE.toTeamDto(teamRepository.save(TeamMapper.INSTANCE.toTeamForUpdate(team)));
+    public TeamDto updateTeam(UpdateTeamRequest request) {
+        Team team = teamRepository.save(TeamMapper.INSTANCE.toTeamForUpdate(request));
+        return TeamMapper.INSTANCE.toTeamDto(team);
     }
 
     public void deleteTeam(UUID id) {
